--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</div>
 			<br><br>
 			<div class="flex-col-c-m p-l-15 p-r-15 p-t-80 p-b-90" style="padding-bottom: 10px;padding-bottom:0px;margin: 1px auto;width:100%">
-				<h3 id="mainpara" class="l1-txt2 txt-center p-b-40 respon1" style="font-size:80px;padding-top:10vh;">
+				<h3 id="mainpara" class="l1-txt2 txt-center p-b-40 respon1" style=""Arial Black", Gadget, sans-serif;font-size:80px;padding-top:10vh;">
 					My new Site is comming soon
 				</h3>
 				<h3 style="color:#fff" >Stay tuned for something amazing!</h3>
