--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<!-- -->
 		<div class="w-full flex-w flex-sb-m" style="text-align: center;padding-bottom: 0px;">
 			<div class="wrappic1 m-r-30 m-t-10 m-b-10" style="margin:10px 0;width:100%">
-				<p style="color:#fff; font-size: 24px;font-weight: 800;font-family: Montserrat-Regular;">Mohmaed Hakem</p>
+				<p style="color:#fff; font-size: 80px !important;font-weight: 800;font-family: Montserrat-Regular;">Mohmaed Hakem</p>
 			</div>
 			<br><br>
 			<div class="flex-col-c-m p-l-15 p-r-15 p-t-80 p-b-90" style="padding-bottom: 10px;padding-bottom:0px;margin: 1px auto;width:100%">
