--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 		<!-- -->
 		<div class="w-full flex-w flex-sb-m" style="text-align: center;padding-bottom: 0px;">
 			<div class="wrappic1 m-r-30 m-t-10 m-b-10" style="margin:10px 0;width:100%">
-				<p style="color:#fff; font-size: 80px !important;font-weight: 800;font-family: Montserrat-Regular;">Mohmaed Hakem</p>
+				<p style="color:#fff; font-size: 40px !important;font-weight: 800;font-family: Montserrat-Regular;">Mohmaed Hakem</p>
 			</div>
 			<br><br>
 			<div class="flex-col-c-m p-l-15 p-r-15 p-t-80 p-b-90" style="padding-bottom: 10px;padding-bottom:0px;margin: 1px auto;width:100%">
-				<h3 id="mainpara" class="l1-txt2 txt-center p-b-40 respon1" style=""Arial Black", Gadget, sans-serif;font-size:80px;padding-top:10vh;">
+				<h3 id="mainpara" class="l1-txt2 txt-center p-b-40 respon1" style=""Arial Black", Gadget, sans-serif;font-size:80px !important;padding-top:10vh;">
 					My new Site is comming soon
 				</h3>
 				<h3 style="color:#fff" >Stay tuned for something amazing!</h3>
