--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 padding-top:0px !important;
                 top:0px;
             }
+	    #name {
+	        font-size: 40px;
+	    }
         }
 	</style>
 
@@ -47,7 +50,7 @@
 		<!-- -->
 		<div class="w-full flex-w flex-sb-m" style="text-align: center;padding-bottom: 0px;">
 			<div class="wrappic1 m-r-30 m-t-10 m-b-10" style="margin:10px 0;width:100%">
-				<p style="color:#fff; font-size: 5vw !important;font-weight: 800;font-family: Montserrat-Regular;">Mohmaed Hakem</p>
+				<p id="name" style="color:#fff; font-size: 5vw !important;font-weight: 800;font-family: Montserrat-Regular;">Mohmaed Hakem</p>
 			</div>
 			<br><br>
 			<div class="flex-col-c-m p-l-15 p-r-15 p-t-80 p-b-90" style="padding-bottom: 10px;padding-bottom:0px;margin: 1px auto;width:100%">
